--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,7 +6,6 @@ ENV PYTHONPATH=/app
 
 WORKDIR /app
 
-
 RUN apt-get update && apt-get install -y --no-install-recommends \
     build-essential \
     && rm -rf /var/lib/apt/lists/*
@@ -14,13 +13,15 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
+COPY backend ./backend
+COPY core ./core
+COPY agent ./agent
+COPY data ./data
+
 RUN adduser --disabled-password --gecos '' appuser
-
-COPY . .
-
 RUN chown -R appuser:appuser /app
-
 USER appuser
-EXPOSE 8501
 
-CMD ["python", "-m", "streamlit", "run", "app/main.py", "--server.port=8501", "--server.address=0.0.0.0"]
+EXPOSE 8000
+
+CMD ["uvicorn", "backend.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
