--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,31 @@
 version: '3.8'
 
 services:
-  csv-agent:
-    build: .
+  backend:
+    build:
+      context: .
+      dockerfile: backend/Dockerfile
     ports:
-      - "8501:8501"
+      - "8000:8000"
     env_file:
       - .env
     volumes:
-      - ./:/app
-    command: python -m streamlit run app/main.py --server.port=8501 --server.address=0.0.0.0
+      - ./backend:/app/backend
+      - ./core:/app/core
+    # Ensure backend reloads on code changes
+    command: uvicorn backend.main:app --host 0.0.0.0 --port 8000 --reload
+
+  frontend:
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
+    ports:
+      - "5173:5173"
+    volumes:
+      - ./frontend:/app
+      - /app/node_modules
+    # Check for backend availability before starting (optional but good practice)
+    depends_on:
+      - backend
+    environment:
+      - VITE_API_URL=http://localhost:8000
