--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 openai==2.14.0
 pandas==2.3.3
 python-dotenv==1.2.1
+streamlit==1.52.2
 pydantic-settings
 fastapi
 uvicorn
 python-multipart
+# Database
+sqlmodel
+asyncpg
+greenlet
