--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,7 @@ services:
     volumes:
       - ./backend:/app/backend
       - ./core:/app/core
+      - ./agent:/app/agent
       - ./uploads:/app/uploads
     # Production command without reload
     command: uvicorn backend.main:app --host 0.0.0.0 --port 8000
@@ -45,7 +46,8 @@ services:
     depends_on:
       - backend
     environment:
-      - VITE_API_URL=http://localhost:8000/api
+      - VITE_API_URL=/api
+      - VITE_API_TARGET=http://backend:8000
 
 volumes:
   postgres_data:
